--- a/src/Components/Form.css
+++ b/src/Components/Form.css
@@ -71,6 +71,7 @@
         justify-content: center;
         /* text-align: center; */
         /* padding: 30px 100px 50px; */
+        font-family: sans-serif;
     }
 
     .edge form input
