--- a/src/Components/Form.css
+++ b/src/Components/Form.css
@@ -72,6 +72,7 @@
         /* text-align: center; */
         /* padding: 30px 100px 50px; */
         font-family: sans-serif;
+        margin-top: 100px;
     }
 
     .edge form input
